apex/grammar.js
    parser_output: ($) => repeat($.statement),

    // Expressions

    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGN,
        seq(
          field("left", choice($.identifier, $.field_access, $.array_access)),
          field(
            "operator",
            alias(
              choice(
                "=",
                "+=",
                "-=",
                "*=",
                "/=",
                "&=",
                "|=",
                "^=",
                "%=",
                "<<=",
                token(seq("<", /[\s\n]*/, "<", /[\s\n]*/, "=")),
                token(seq(">", /[\s\n]*/, ">", /[\s\n]*/, "=")),
                token(seq(">", /[\s\n]*/, ">", /[\s\n]*/, ">", /[\s\n]*/, "=")),
              ),
              $.assignment_operator,
            ),
          ),
          field("right", $.expression),
        ),
      ),

    binary_expression: ($) =>
      choice(
        ...[
          [">", PREC.REL],
          ["<", PREC.REL],
          [alias(token(seq(">", /[\s\n]*/, "=")), ">="), PREC.REL],
          [alias(token(seq("<", /[\s\n]*/, "=")), "<="), PREC.REL],
          ["==", PREC.EQUALITY],
          ["===", PREC.EQUALITY],
          ["!=", PREC.EQUALITY],
          ["<>", PREC.EQUALITY],
          ["!==", PREC.EQUALITY],
          ["&&", PREC.AND],
          ["||", PREC.OR],
          ["??", PREC.NULL_COALESCE],
          ["+", PREC.ADD],
          ["-", PREC.ADD],
          ["*", PREC.MULT],
          ["/", PREC.MULT],
          ["&", PREC.BIT_AND],
          ["|", PREC.BIT_OR],
          ["^", PREC.BIT_XOR],
          ["%", PREC.MULT],
          [alias(token(seq("<", /[\s\n]*/, "<")), "<<"), PREC.SHIFT],
          [alias(token(seq(">", /[\s\n]*/, ">")), ">>"), PREC.SHIFT],
          [
            alias(token(seq(">", /[\s\n]*/, ">", /[\s\n]*/, ">")), ">>>"),
            PREC.SHIFT,
          ],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $.expression),
              field("operator", operator),
              field("right", $.expression),
            ),
          ),
        ),
      ),

    unary_expression: ($) =>
      prec.left(
        PREC.UNARY,
        seq(
          field("operator", choice("+", "-", "!", "~")),
          field("operand", $.expression),
        ),
      ),

    parenthesized_expression: ($) => seq("(", $.expression, ")"),

    object_creation_expression: ($) =>
      prec.right(
        seq(
          ci("new"),
          field("type_arguments", optional($.type_arguments)),
          field("type", $._simple_type),
          field("arguments", $.argument_list),
          optional($.class_body),
        ),
      ),

    _property_navigation: ($) => choice($.safe_navigation_operator, "."),

    method_invocation: ($) =>
      seq(
        choice(
          field("name", $.identifier),
          seq(
            field("object", choice($.primary_expression, $.super)),
            $._property_navigation,
            field("type_arguments", optional($.type_arguments)),
            field("name", $.identifier),
          ),
        ),
        field("arguments", $.argument_list),
      ),

    argument_list: ($) => seq("(", commaJoined($.expression), ")"),

    switch_expression: ($) =>
      seq(
        ci("switch"),
        ci("on"),
        field("condition", $.expression),
        field("body", $.switch_block),
      ),

    switch_block: ($) => seq("{", repeat1($.switch_rule), "}"),

    switch_rule: ($) => seq($.switch_label, $.block),

    switch_label: ($) =>
      seq(
        ci("when"),
        choice(
          // SObject type var syntax
          $.when_sobject_type,
          commaJoined1($.expression),
          ci("else"),
        ),
      ),

    when_sobject_type: ($) => seq($._unannotated_type, $.identifier),

    // Statements

    block: ($) => seq("{", repeat($.statement), "}"),

    expression_statement: ($) => seq($.expression, ";"),

    return_statement: ($) => seq(ci("return"), optional($.expression), ";"),

    class_declaration: ($) =>
      seq(
        optional($.modifiers),
        ci("class"),
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameters)),
        optional(field("superclass", $.superclass)),
        optional(field("interfaces", $.interfaces)),
        field("body", $.class_body),
      ),

    trigger_declaration: ($) =>
      seq(
        ci("trigger"),
        field("name", $.identifier),
        ci("on"),
        field("object", $.identifier),
        "(",
        field("events", commaJoined1($.trigger_event)),
        ")",
        field("body", $.trigger_body),
      ),

    trigger_event: ($) =>
      choice(
        $.before_insert,
        $.before_update,
        $.before_delete,
        $.after_insert,
        $.after_update,
        $.after_delete,
        $.after_undelete,
      ),

    before_insert: ($) => ci("before insert"),
    before_update: ($) => ci("before update"),
    before_delete: ($) => ci("before delete"),
    after_insert: ($) => ci("after insert"),
    after_update: ($) => ci("after update"),
    after_delete: ($) => ci("after delete"),
    after_undelete: ($) => ci("after undelete"),

    trigger_body: ($) => $.block,

    modifiers: ($) => repeat1(choice($.annotation, $.modifier)),

    modifier: ($) =>
      choice(
        $.global,
        $.public,
        $.testMethod,
        $.webservice,
        $.protected,
        $.override,
        $.private,
        $.virtual,
        $.abstract,
        $.static,
        $.final,
        $.transient,
        $.with_sharing,
        $.without_sharing,
        $.inherited_sharing,
      ),

    global: ($) => ci("global"),
    public: ($) => ci("public"),
    protected: ($) => ci("protected"),
    private: ($) => ci("private"),
    virtual: ($) => ci("virtual"),
    static: ($) => ci("static"),
    final: ($) => ci("final"),
    transient: ($) => ci("transient"),
    class_body: ($) => seq("{", repeat($._class_body_declaration), "}"),

    _class_body_declaration: ($) =>
      choice(
        $.field_declaration,
        $.method_declaration,
        $.class_declaration,
        $.interface_declaration,
        $.enum_declaration,
        $.block,
        $.static_initializer,
        $.constructor_declaration,
        ";",
      ),

    field_declaration: ($) =>
      seq(
        optional($.modifiers),
        field("type", $._unannotated_type),
        $._variable_declarator_list,
        choice($.accessor_list, ";"),
      ),

    _variable_declarator_list: ($) =>
      commaJoined1(field("declarator", $.variable_declarator)),

    variable_declarator: ($) =>
      seq(
        $._variable_declarator_id,
        optional(
          seq(
            alias("=", $.assignment_operator),
            field("value", $._variable_initializer),
          ),
        ),
      ),

    _variable_declarator_id: ($) =>
      seq(
        field("name", $.identifier),
        field("dimensions", optional($.dimensions)),
      ),

    _variable_initializer: ($) => choice($.expression, $.array_initializer),

    _unannotated_type: ($) => choice($._simple_type, $.array_type),

    _simple_type: ($) =>
      choice(
        $.void_type,
        $.boolean_type,
        alias($.identifier, $.type_identifier),
        $.scoped_type_identifier,
        $.java_type,
        $.generic_type,
      ),

    local_variable_declaration: ($) =>
      seq(
        optional($.modifiers),
        field("type", $._unannotated_type),
        $._variable_declarator_list,
        ";",
      ),

    line_comment: ($) => token(prec(PREC.COMMENT, seq("//", /[^\r\n]*/))),

    accessor_list: ($) => seq("{", repeat1($.accessor_declaration), "}"),

    accessor_declaration: ($) =>
      seq(
        optional($.modifiers),
        field("accessor", choice(ci("get"), ci("set"))),
        choice(field("body", $.block), ";"),
      ),

    ...soslGrammar.rules,
    // https://docs.oracle.com/javase/specs/jls/se8/html/jls-3.html#jls-IdentifierChars
    identifier: ($) => /[\p{L}_$][\p{L}\p{Nd}_$]*/,

    // Literals

    int: ($) => token(seq(DIGITS, optional(choice("l", "L")))),

    string_literal: ($) => /'(\\[nNrRtTbBfFuU"'_%\\]|[^\\'])*'/,
